# weather

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: ci.yml
src/: geo.rs  help.rs  init.rs  main.rs  wind.rs  work.rs
src/provider/: accuweather.rs  aerisweather.rs  mod.rs  openweather.rs  weatherapi.rs
