[package]
name = "weather"
version = "0.1.0"
edition = "2021"
authors = ["Volodymyr Zamkovyi <v.zamkovyi@gmail.com>"]
description = "Elastio Rust Test Task from https://gist.github.com/anelson/0029f620105a19702b5eed5935880a28"
readme = "README.md"
repository = "https://github.com/tryteex/weather"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
urlencoding = "2.1"
chrono = "0.4"

[profile.release]
debug = false
opt-level = 3
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"


